added icons to context menu.Added new folder and cut option